third_party/move/move-compiler-v2/tests/bytecode-generator/moved_var_not_simplified3.exp
// -- Model dump before bytecode pipeline
module 0xc0ffee::m {
    public fun test(): u8 {
        {
          let x: u8 = 40;
          {
            let y: u8 = Move(x);
            {
              let _: u8 = x;
              y
            }
          }
        }
    }
} // end 0xc0ffee::m

============ initial bytecode ================

[variant baseline]
public fun m::test(): u8 {
     var $t0: u8
     var $t1: u8
     var $t2: u8
     var $t3: u8
     var $t4: u8
     var $t5: u8
  0: $t2 := 40
  1: $t1 := infer($t2)
  2: $t4 := move($t1)
  3: $t3 := infer($t4)
  4: $t5 := infer($t1)
  5: $t0 := infer($t3)
  6: return $t0
}


Diagnostics:
error: cannot move local `x` since it is still in use
  ┌─ tests/bytecode-generator/moved_var_not_simplified3.move:4:17
  │
4 │         let y = move x;
  │                 ^^^^^^ attempted to move here
5 │         let _ = x;
  │             - used here
