third_party/move/move-compiler-v2/tests/bytecode-generator/moved_var_not_simplified3.move
module 0xc0ffee::m {
    public fun test(): u8 {
        let x = 40;
        let y = move x;
        let _ = x;
        y
    }
}
